--- a/style.css
+++ b/style.css
@@ -80,6 +80,76 @@ body{
     margin-top: 5rem !important;
     margin-bottom: 5rem !important;
 }
+.pl-1{
+    padding-left: 1rem !important;
+}
+.pl-2{
+    padding-left: 2rem !important;
+}
+.pl-3{
+    padding-left: 3rem !important;
+}
+.pl-4{
+    padding-left: 4rem !important;
+}
+.pl-5{
+    padding-left: 5rem !important;
+}
+.pr-1{
+    padding-right: 1rem !important;
+}
+.pr-2{
+    padding-right: 2rem !important;
+}
+.pr-3{
+    padding-right: 3rem !important;
+}
+.pr-4{
+    padding-right: 4rem !important;
+}
+.pr-5{
+    padding-right: 5rem !important;
+}
+.px-1{
+    padding-left: 1rem !important;
+    padding-right: 1rem !important;
+}
+.px-2{
+    padding-left: 2rem !important;
+    padding-right: 2rem !important;
+}
+.px-3{
+    padding-left: 3rem !important;
+    padding-right: 3rem !important;
+}
+.px-4{
+    padding-left: 4rem !important;
+    padding-right: 4rem !important;
+}
+.px-5{
+    padding-left: 5rem !important;
+    padding-right: 5rem !important;
+}
+.py-1{
+    padding-top: 1rem !important;
+    padding-bottom: 1rem !important;
+}
+.py-2{
+    padding-top: 2rem !important;
+    padding-bottom: 2rem !important;
+}
+.py-3{
+    padding-top: 3rem !important;
+    padding-bottom: 3rem !important;
+}
+.py-4{
+    padding-top: 4rem !important;
+    padding-bottom: 4rem !important;
+}
+.py-5{
+    padding-top: 5rem !important;
+    padding-bottom: 5rem !important;
+}
 
 .container{
     padding: 20px;
@@ -105,6 +175,10 @@ body{
 .text-muted{
     opacity: 0.6;
 }
+.bg-dark {
+    background: #333;
+    color: white;
+}
 /* basic styling ends */
 
 /* button starts */
@@ -116,6 +190,7 @@ button{
     border: 2.5px solid blue;
     border-radius: 6px;
     color: blue;
+    outline: none;
     transition: 0.2s;
     cursor: pointer;
 }
@@ -138,6 +213,15 @@ button:hover{
 .btn-danger:hover{
     background: var(--danger);
     color: white;
+}
+.btn-dark{
+    color: #333;
+    border: 2.5px solid #333;
+}
+.btn-dark:hover{
+    color: #fff;
+    border: 2.5px solid #262626;
+    background: #333;
 }
 /* button ends */
 
@@ -273,26 +357,35 @@ input:active{
 }
 form{
     width: 100vw;
-    padding: 0 6vw !important;
-    padding-right: 6vw !important;
+    padding: 0 6vw;
+    padding-right: 6vw;
 }
 /* form ends */
 
 /* card starts here */
 .card{
-    width: 250px;
+    max-width: 250px;
     border: 1px solid rgba(10,10,10,0.5);
     border-radius: 10px;
-    padding: 0 25px 10px 25px;
     margin: 10px;
     margin-right: 10px !important;
     display: inline-block;
+}
+.card-body{
+    padding: 0 25px 10px 25px;
 }
 .card > p {
     margin: 10px 0;
 }
 .card > h1,h2,h3,h4 {
     margin: 15px 0 0 0;
+}
+.card-img{
+    width: 100%;
+    height: 200px;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    filter: grayscale(120%) contrast(120%) brightness(60%) saturate(1) ;
 }
 /* card ends here */
 
